syntax = "proto3";

//指定包名，防止命名冲突
package com.moji.test;

//package tutorial;

//指定java的包名
option java_package = "com.moji.protobuffer";
//指定编译成java类后的类名，如果不指定，默认按驼峰方式转换proto文件名
option java_outer_classname = "AddressBookProtos";


message Person {
  // 使用required注释的字段强制需要被显示初始化，如果不显示初始化会报运行时错误
  string name = 1;
  int32 id = 2;
  // 使用optional注释的字段不需要显示初始化，如果没有初始化，会指定系统默认的初始值或者自定义的初始值
  string email = 3;

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber {
    string number = 1;
    // 此处就是指定自定义的默认初始值为HOME
    PhoneType type = 2;
  }

  // 被repeated注释的字段表示可以可以重复赋值，protobuffer中会保持多个值的先后顺序
  repeated PhoneNumber phones = 4;
}
message AddressBook {
  repeated Person people = 1;
}